Create Author resource and Genre enum
